--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 [Oo]bj/
 [Tt]emp/
 [Uu]nityGenerated/
+[Ll]ogs/
+[Uu]ser[Ss]ettings/
+
 # file on crash reports
 sysinfo.txt
 # Unity3D generated meta files
@@ -64,3 +67,4 @@ Thumbs.db
 # Temporary auto-generated Android Assets
 [Aa]ssets/[Ss]treamingAssets/aa.meta
 [Aa]ssets/[Ss]treamingAssets/aa/*
+
