--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ crashlytics-build.properties
 [Aa]ssets/[Ss]treamingAssets/aa/*
 MeltingSnow_Test/Logs/shadercompiler-UnityShaderCompiler.exe0.log
 *.log
+git rm --cached MeltingSnow_Test\UserSettings\Layouts\default-2022.dwlt
+
