--- a/.gitignore
+++ b/.gitignore
@@ -73,4 +73,6 @@ crashlytics-build.properties
 MeltingSnow_Test/Logs/shadercompiler-UnityShaderCompiler.exe0.log
 *.log
 git rm --cached MeltingSnow_Test\UserSettings\Layouts\default-2022.dwlt
-
+git commit -m "remove MeltingSnow_Test\UserSettings\Layouts\default-2022.dwlt"
+git rm --cached MeltingSnow_Test\Logs\shadercompiler-UnityShaderCompiler.exe0.log
+git commit -m "remove MeltingSnow_Test\Logs\shadercompiler-UnityShaderCompiler.exe0.log"
