--- a/.gitignore
+++ b/.gitignore
@@ -9,13 +9,14 @@
 [Bb]uilds/
 [Ll]ogs/
 [Uu]ser[Ss]ettings/
-
+[Uu]serSettings/EditorUserSettings.asset
+![Aa]ssets/**/*.meta
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
-[Mm]emoryCaptures/
+/[Mm]emoryCaptures/
 
 # Recordings can get excessive in size
-[Rr]ecordings/
+/[Rr]ecordings/
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
@@ -72,6 +73,7 @@ crashlytics-build.properties
 [Aa]ssets/[Ss]treamingAssets/aa/*
 MeltingSnow_Test/Logs/shadercompiler-UnityShaderCompiler.exe0.log
 *.log
+*.dwlt
 git rm --cached MeltingSnow_Test\UserSettings\Layouts\default-2022.dwlt
 git commit -m "remove MeltingSnow_Test\UserSettings\Layouts\default-2022.dwlt"
 git rm --cached MeltingSnow_Test\Logs\shadercompiler-UnityShaderCompiler.exe0.log
