--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
-git lfs install
 # Macro for Unity YAML-based asset files.
 [attr]unityyaml -text merge=unityyamlmerge diff
 
@@ -10,120 +9,42 @@ git lfs install
 
 # Code
 *.cs text diff=csharp
+# .gitattributes
 
-# Unity Text Assets
-*.meta unityyaml
-*.unity unityyaml
-*.asset unityyaml
-*.prefab unityyaml
-*.mat unityyaml
-*.anim unityyaml
-*.controller unityyaml
-*.overrideController unityyaml
-*.physicMaterial unityyaml
-*.physicsMaterial2D unityyaml
-*.playable unityyaml
-*.mask unityyaml
-*.brush unityyaml
-*.flare unityyaml
-*.fontsettings unityyaml
-*.guiskin unityyaml
-*.giparams unityyaml
-*.renderTexture unityyaml
-*.spriteatlas unityyaml
-*.terrainlayer unityyaml
-*.mixer unityyaml
-*.shadervariants unityyaml
-*.preset unityyaml
-*.asmdef -text diff
-
-# Unity Binary Assets
-*.cubemap lfs
-*.unitypackage lfs
-# Note: Unity terrain assets must have "-Terrain" suffix.
-*-[Tt]errain.asset -unityyaml lfs
-# Note: Unity navmesh assets must have "-NavMesh" suffix.
-*-[Nn]av[Mm]esh.asset -unityyaml lfs
-
-# Image
-*.jpg lfs
-*.jpeg lfs
-*.png lfs
-*.apng lfs
-*.atsc lfs
-*.gif lfs
-*.bmp lfs
-*.exr lfs
-*.tga lfs
-*.tiff lfs
-*.tif lfs
-*.iff lfs
-*.pict lfs
-*.dds lfs
-*.xcf lfs
-*.leo lfs
-*.kra lfs
-*.kpp lfs
-*.clip lfs
-*.webm lfs
-*.webp lfs
-*.svg lfs
-*.svgz lfs
-*.psd lfs
-*.afphoto lfs
-*.afdesign lfs
+# Images
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.jpeg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -text
+*.ai filter=lfs diff=lfs merge=lfs -text
+*.tif filter=lfs diff=lfs merge=lfs -text
+*.cubemap filter=lfs diff=lfs merge=lfs -text
 
 # Audio
-*.mp3 lfs
-*.ogg lfs
-*.wav lfs
-*.aiff lfs
-*.aif lfs
-*.mod lfs
-*.it lfs
-*.s3m lfs
-*.xm lfs
+*.mp3 filter=lfs diff=lfs merge=lfs -text
+*.wav filter=lfs diff=lfs merge=lfs -text
+*.ogg filter=lfs diff=lfs merge=lfs -text
 
 # Video
-*.mov lfs
-*.avi lfs
-*.asf lfs
-*.mpg lfs
-*.mpeg lfs
-*.mp4 lfs
-*.flv lfs
-*.ogv lfs
-*.wmv lfs
+*.mp4 filter=lfs diff=lfs merge=lfs -text
+*.mov filter=lfs diff=lfs merge=lfs -text
 
-# 3D
-*.fbx lfs
-*.obj lfs
-*.max lfs
-*.blend lfs
-*.blender lfs
-*.dae lfs
-*.mb lfs
-*.ma lfs
-*.3ds lfs
-*.dfx lfs
-*.c4d lfs
-*.lwo lfs
-*.lwo2 lfs
-*.abc lfs
-*.3dm lfs
-*.bin lfs
-*.glb lfs
+# 3D Objects
+*.FBX filter=lfs diff=lfs merge=lfs -text
+*.fbx filter=lfs diff=lfs merge=lfs -text
+*.blend filter=lfs diff=lfs merge=lfs -text
+*.obj filter=lfs diff=lfs merge=lfs -text
 
-# Executables
-*.exe lfs
-*.dll lfs
-*.so lfs
-*.pdb lfs
-*.mdb lfs
-
-# Packaging
-*.zip lfs
-*.7z lfs
-*.gz lfs
-*.rar lfs
-*.tar lfs
+# Other
+*.a filter=lfs diff=lfs merge=lfs -text
+*.exr filter=lfs diff=lfs merge=lfs -text
+*.tga filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+*.dll filter=lfs diff=lfs merge=lfs -text
+*.aif filter=lfs diff=lfs merge=lfs -text
+*.ttf filter=lfs diff=lfs merge=lfs -text
+*.rns filter=lfs diff=lfs merge=lfs -text
+*.reason filter=lfs diff=lfs merge=lfs -text
+*.lxo filter=lfs diff=lfs merge=lfs -text
